Fix 'FindCommandTest'